--- a/front-end/app/index.html
+++ b/front-end/app/index.html
@@ -39,21 +39,21 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="active"><a href="#/">Chat</a></li>
+              <li><a ng-href="#/about">O projekcie</a></li>
+              <li><a ng-href="#/contact">Kontakt</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
                 <a class="dropdown-toggle" href="#logIn" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                      Log in
+                      Niezalogowany
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="#logIn">Log in</a></li>
-                  <li><a href="#register">Register</a></li>
-                  <li><a href="#logOut">Log out</a></li>
+                  <li><a ng-href="#/profile">Zaloguj się</a></li>
+                  <li><a href="#register">Zarejestruj się</a></li>
+                  <li><a href="#logOut">Wyloguj się</a></li>
                 </ul>
               </li>
             </ul>
@@ -68,7 +68,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> D.D.A.M.P team, dzieciaczki!</p>
       </div>
     </div>
 
