--- a/front-end/app/index.html
+++ b/front-end/app/index.html
@@ -14,6 +14,28 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 51.250, lng: 22.57},
+          zoom: 13
+        });
+      }
+    </script>
   </head>
   <body ng-app="frontEndApp">
     <!--[if lte IE 8]>
@@ -62,16 +84,18 @@
       </div>
     </div>
 
+    <div id="mapcontainer">
+      <div id="map"></div>
+  </div>
+
     <div class="container">
     <div ng-view=""></div>
     </div>
-
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> D.D.A.M.P team, dzieciaczki!</p>
+        <p><span class="glyphicon glyphicon-heart"></span> D.D.A.M.P team</p>
       </div>
     </div>
-
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -83,7 +107,6 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
-
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -103,5 +126,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSB-iezKnEbxmC9EQ599iI5b4AfmJPibk&callback=initMap"
+    async defer></script>
 </body>
 </html>
