--- a/front-end/app/index.html
+++ b/front-end/app/index.html
@@ -33,8 +33,8 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Chat</a></li>
-              <li><a ng-href="#/about">O projekcie</a></li>
-              <li><a ng-href="#/contact">Kontakt</a></li>
+              <li><a ng-href="views/about.html">O projekcie</a></li>
+              <li><a ng-href="views/contact.html">Kontakt</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
@@ -95,7 +95,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/map.js"></script>
-        <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/main.js"></script> 
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSB-iezKnEbxmC9EQ599iI5b4AfmJPibk&callback=initMap"
